# Genomic-and-Protemic-Precision-medicine

./: .dockerignore  .gitignore  Dockerfile  MODEL_STATS.md  PROJECT_GUIDE.md  README.md  demo_molecular_profile.json  pyproject.toml  render.yaml
artifacts/release_baseline/: per_drug_metrics.csv  release_baseline.joblib  test_metrics.csv  training_summary.json  validation_metrics.csv
demo_profiles/: gastrointestinal_profiles.json  gynecologic_profiles.json  hematologic_profiles.json  lung_cancer_profiles.json
docs/: uploaded-dataset-summary.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
gdsc_drug_response/: __init__.py  api.py  benchmarks.py  cli.py  core.py  data.py  database.py  interpreters.py  metrics.py  models.py  seed_data.py
tests/: test_api.py
