[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdsc-drug-response"
version = "0.1.0"
description = "AI-based drug response prediction pipeline for GDSC data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.8",
  "scikit-learn>=1.5",
  "shap>=0.46",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
  "xgboost>=2.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gdsc_drug_response*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
